--- a/views/index.jade
+++ b/views/index.jade
@@ -147,44 +147,44 @@ block content
       // unfortunately, because of the vertical hack, I have to do 1-valIWant
       $('#happy').click(function(){
         setSliderVals({
-          'energy':0.2,
-          'danceability':0.45,
-          'acousticness':0.9,
-          'liveness':0.6,
-          'speechiness':0.5,
-          'valence':0.1})
+          'energy':1.0-0.913343913079762,
+          'danceability':1.0-0.6100998931363761,
+          'acousticness':1.0-0.7374224353316493,
+          'liveness':1.0-0.6926573602661282,
+          'speechiness':1.0-0.31465060102824693,
+          'valence':1.0-0.8698287350605954})
       });
       $('#angry').click(function(){
-        setSliderVals({'energy':0.2, 
-          'danceability':0.35, 
-          'acousticness':0.4, 
-          'liveness':0.8, 
-          'speechiness':0.4,
-          'valence':0.85})
+        setSliderVals({'energy':1.0-0.9170251435909973, 
+          'danceability':1.0-0.5805512315215549, 
+          'acousticness':1.0-0.028052208252320028, 
+          'liveness':1.0-0.058216302825603194, 
+          'speechiness':1.0-0.19736226743764967,
+          'valence':1.0-0.7162440850922133})
       });
       $('#talk').click(function(){
-        setSliderVals({'energy':0.95,
-          'danceability':0.95,
-          'acousticness':0.1,
-          'liveness':0.2,
-          'speechiness':0.01,
-          'valence':0.7})
+        setSliderVals({'energy':1.0-0.3415466066494113,
+          'danceability':1.0-0.7965151133405258,
+          'acousticness':1.0-0.8823552991380124,
+          'liveness':1.0-0.28096379653416353,
+          'speechiness':1.0-0.9523321352813255,
+          'valence':1.0-0.7612421748854001})
       });
       $('#dance').click(function(){
-        setSliderVals({'energy':0.1,
-          'danceability':0.05,
-          'acousticness':0.1,
-          'liveness':0.8,
-          'speechiness':0.65,
-          'valence':0.1})
+        setSliderVals({'energy':1.0-0.901658582238437,
+          'danceability':1.0-0.8208822535574742,
+          'acousticness':1.0-0.006940006951758559,
+          'liveness':1.0-0.17598336300124262,
+          'speechiness':1.0-0.35546061315509914,
+          'valence':1.0-0.8832765908615638})
       });
       $('#chill').click(function(){
-        setSliderVals({'energy':0.8,
-          'danceability':0.75,
-          'acousticness':0.5,
-          'liveness':0.6,
-          'speechiness':0.4,
-          'valence':0.7})
+        setSliderVals({'energy':1.0-0.33473998680400335,
+          'danceability':1.0-0.4743918438774602,
+          'acousticness':1.0-0.3332875568879346,
+          'liveness':1.0-0.3146289271368771,
+          'speechiness':1.0-0.026389763104301633,
+          'valence':1.0-0.0911303089034443})
       });
       $('#random_song').click(function(){
         genRandomSliderVals();
